status: Add API status with RTT to sctool
This change breaks backwards compatibility because it changes manager
API and sctool output.

`sctool status` command gets new status column for API status with RTT
in brackets.

```
╭───────────┬──────────┬─────┬────────────────╮
│ CQL       │ API      │ SSL │ Host           │
├───────────┼──────────┼─────┼────────────────┤
│ UP (7ms)  │ UP (6ms) │ OFF │ 192.168.100.21 │
│ UP (8ms)  │ UP (2ms) │ OFF │ 192.168.100.22 │
│ UP (36ms) │ UP (6ms) │ OFF │ 192.168.100.23 │
╰───────────┴──────────┴─────┴────────────────╯
```

API status represents result of three sequential pings to the host.
Time in brackets represents averaged round trip time between those pings.

If any of the sequential pings fail, API is considered to be DOWN.

Fixes #878
