# mermaidclient/internal/models/cluster_status.go
@@ -48,6 +48,12 @@ func (m ClusterStatus) Validate(formats strfmt.Registry) error {
 // swagger:model ClusterStatusItems0
 type ClusterStatusItems0 struct {
 
+	// api rtt ms
+	APIRttMs float32 `json:"api_rtt_ms,omitempty"`
+
+	// api status
+	APIStatus string `json:"api_status,omitempty"`
+
 	// cql rtt ms
 	CqlRttMs float32 `json:"cql_rtt_ms,omitempty"`
 
