# mermaidclient/model.go
@@ -184,6 +184,8 @@ func (rp RepairProgress) addRepairUnitDetailedProgress(t *table.Table, u *Repair
 	}
 }
 
+const statusDown = "DOWN"
+
 // ClusterStatus contains cluster status info.
 type ClusterStatus models.ClusterStatus
 
@@ -195,7 +197,7 @@ func (cs ClusterStatus) Render(w io.Writer) error {
 
 	var (
 		dc = cs[0].Dc
-		t  = table.New("CQL", "SSL", "Host")
+		t  = table.New("CQL", "API", "SSL", "Host")
 	)
 
 	for _, s := range cs {
@@ -204,17 +206,21 @@ func (cs ClusterStatus) Render(w io.Writer) error {
 				return err
 			}
 			dc = s.Dc
-			t = table.New("CQL", "SSL", "Host")
+			t = table.New("CQL", "API", "SSL", "Host")
 		}
-		status := "DOWN"
-		if s.CqlStatus != "DOWN" {
-			status = fmt.Sprintf("%s (%.0fms)", s.CqlStatus, s.CqlRttMs)
+		cqlStatus := statusDown
+		if s.CqlStatus != statusDown {
+			cqlStatus = fmt.Sprintf("%s (%.0fms)", s.CqlStatus, s.CqlRttMs)
+		}
+		apiStatus := statusDown
+		if s.APIStatus != statusDown {
+			apiStatus = fmt.Sprintf("%s (%.0fms)", s.APIStatus, s.APIRttMs)
 		}
 		ssl := "OFF"
 		if s.Ssl {
 			ssl = "ON"
 		}
-		t.AddRow(status, ssl, s.Host)
+		t.AddRow(cqlStatus, apiStatus, ssl, s.Host)
 	}
 	if _, err := w.Write([]byte("Datacenter: " + dc + "\n" + t.String())); err != nil {
 		return err
